--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 				<div class="elementor-element elementor-element-1f4f31b5 elementor-widget elementor-widget-html" data-id="1f4f31b5" data-element_type="widget" data-widget_type="html.default">
 				<div class="elementor-widget-container">
-			<div id="vid_64584b3c2c5fbe00092301ac" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_64584b3c2c5fbe00092301ac" src="images/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_64584b3c2c5fbe00092301ac" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_64584b3c2c5fbe00092301ac">var s=document.createElement("script");s.src="https://scripts.converteai.net/d0ff653e-30c9-4f21-b1ea-51f76fc7be2c/players/64584b3c2c5fbe00092301ac/player.js",s.async=!0,document.head.appendChild(s);</script>
+			<div id="vid_6462b6e1f6d77e0009a351f0" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_6462b6e1f6d77e0009a351f0" src="https://images.converteai.net/f2be408d-6684-409b-b666-51f9e9043200/players/6462b6e1f6d77e0009a351f0/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_6462b6e1f6d77e0009a351f0" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_6462b6e1f6d77e0009a351f0">var s=document.createElement("script");s.src="https://scripts.converteai.net/f2be408d-6684-409b-b666-51f9e9043200/players/6462b6e1f6d77e0009a351f0/player.js",s.async=!0,document.head.appendChild(s);</script>
 
-<link rel="preload" href="https://scripts.converteai.net/d0ff653e-30c9-4f21-b1ea-51f76fc7be2c/players/64584b3c2c5fbe00092301ac/player.js" as="script">
+<link rel="preload" href="https://scripts.converteai.net/f2be408d-6684-409b-b666-51f9e9043200/players/6462b6e1f6d77e0009a351f0/player.js" as="script">
 <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
-<link rel="preload" href="https://images.converteai.net/d0ff653e-30c9-4f21-b1ea-51f76fc7be2c/players/64584b3c2c5fbe00092301ac/thumbnail.jpg" as="image">
-<link rel="preload" href="https://cdn.converteai.net/d0ff653e-30c9-4f21-b1ea-51f76fc7be2c/645849deaac9bc00093d6282/main.m3u8" as="fetch">
+<link rel="preload" href="https://images.converteai.net/f2be408d-6684-409b-b666-51f9e9043200/players/6462b6e1f6d77e0009a351f0/thumbnail.jpg" as="image">
+<link rel="preload" href="https://cdn.converteai.net/f2be408d-6684-409b-b666-51f9e9043200/6462b6a39fcbbf0008e56891/main.m3u8" as="fetch">
 <link rel="dns-prefetch" href="https://cdn.converteai.net">
 <link rel="dns-prefetch" href="https://scripts.converteai.net">
 <link rel="dns-prefetch" href="https://images.converteai.net">
