--- a/plus-2/index.html
+++ b/plus-2/index.html
@@ -154,17 +154,18 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				<div class="elementor-widget-container">
 			<!-- HOTMART - Upsell Widget -->
 <div id="box_hotmart"></div>
-<script src="js/hotmart.upsell_checkout.js"></script>
+<script src="https://pay.hotmart.com/assets/js/hotmart.upsell_checkout.js"></script>
 
 <script>
 opts = {
-key: 'USL-100454-300681-0f1051d998b4945b43129393e8eba70d',
+key: 'USL-102235-307628-7a19ac3292da4cca60e10784b4c562e0',
 width: '650' ,
 height: '420'
 };
 Upsell.Widget.show(opts);
 </script>
 <!-- HOTMART - Upsell Widget [end] -->
+
 		</div>
 				</div>
 					</div>
