--- a/plus-2/index.html
+++ b/plus-2/index.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html><html lang="pt-BR"><head>
+	
+	
+		<script id="hotmart_launcher_script">
+			(function(l,a,u,n,c,h,e,r){l['HotmartLauncherObject']=c;l[c]=l[c]||function(){
+			(l[c].q=l[c].q||[]).push(arguments)},l[c].l=1*new Date();h=a.createElement(u),
+			e=a.getElementsByTagName(u)[0];h.async=1;h.src=n;e.parentNode.insertBefore(h,e)
+			})(window,document,'script','//launcher.hotmart.com/launcher.js','hot');
+
+			hot('account','f3d4a1a7-0950-38c3-8661-035810b3153b');
+		</script>
+
 	<meta charset="UTF-8">
 		<title>Plus – Fundacion Columna</title>
 <meta name="robots" content="max-image-preview:large">
