--- a/downsell/index.html
+++ b/downsell/index.html
@@ -170,17 +170,18 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				<div class="elementor-widget-container">
 			<!-- HOTMART - Upsell Widget -->
 <div id="box_hotmart"></div>
-<script src="js/hotmart.upsell_checkout.js"></script>
+<script src="https://pay.hotmart.com/assets/js/hotmart.upsell_checkout.js"></script>
 
 <script>
 opts = {
-key: 'USL-100454-300687-2f778e81b83486170ebe724960357145',
+key: 'USL-102235-319395-fda90cdffbb33ca628bd5771e0ce3491',
 width: '650' ,
 height: '420'
 };
 Upsell.Widget.show(opts);
 </script>
 <!-- HOTMART - Upsell Widget [end] -->
+
 		</div>
 				</div>
 					</div>
